# Droid_mirror

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-13-droid-mirror-implementation.md  2026-07-13-hacker-ui-logcat.md  2026-07-17-multi-device-selection.md
docs/superpowers/specs/: 2026-07-13-droid-mirror-design.md  2026-07-13-hacker-ui-logcat-design.md
src/droid/: __main__.py  app.py
src/droid/commands/: apps.py  device.py  files.py  mirror.py  monitor.py  pairing.py  wifi.py
src/droid/core/: adb_wrapper.py
src/droid/core/pairing/: __init__.py  server.py
src/droid/ui/: style.py
tests/: test_adb_run.py  test_adb_wrapper_filter.py  test_style.py
