[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "droid-mirror"
version = "1.0.0"
description = "Open-source ADB/scrcpy Fleet Manager"
readme = "README.md"
license = { text = "GPLv3" }
requires-python = ">=3.11"
dependencies = [
    "noiseprotocol",
    "zeroconf",
    "qrcode>=8.0",
    "Pillow>=10.0",
]

[project.scripts]
droid = "droid.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
